public/style.css
/* ... */
.button:hover {
    background-color: var(--accent-color);
    cursor: pointer;
}

.green-button {
    background-color: #4caf50;
    color: #fff;
}

.green-button:hover {
    background-color: #2e7d32;
}

.red-button {
    background-color: #f44336;
    color: #fff;
}

.red-button:hover {
    background-color: #c62828;
}

.blue-button {
    background-color: #2196f3;
    color: #fff;
}

.blue-button:hover {
    background-color: #1565c0;
}

.pulsing-button {
    animation: pulse 3s infinite;
    background-color: #000;
    color: #fff;
}

.pulsing-button:hover {
    background-color: gold;
    color: #000;
}

.pulsing-button-container {
    margin-top: 1rem;
}

@keyframes pulse {
    0% {
        border: 1px solid #000;
        box-shadow: none;
    }

    50% {
        border: 1px solid gold;
        box-shadow: 0 0 10px gold;
    }

    100% {
        border: 1px solid #000;
        box-shadow: none;
    }
}

.post-form {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
    gap: 1rem;
    padding: 2rem;
    background-color: var(--secondary-color);
    color: var(--secondary-foreground-color);
    border-radius: 5px;
    box-shadow: #1d1d1b 0px 0px 10px;
    min-width: 300px;
}

.form-group {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    flex-direction: column;
    width: 100%;
}

.form-group label {
    font-size: 1.5rem;
    margin-bottom: .5rem;
}

.form-group .form-control {
    padding: .5rem;
    border-radius: 5px;
    border: 1px solid var(--secondary-foreground-color);
    font-size: 1rem;
    width: calc(100% - 1rem);
}

label b {
    color: red;

}

textarea {
    font-family: 'Arial', sans-serif;
    resize: vertical;
    min-height: 4lh;
}

/* Contact pagina */

.contact {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    background-color: var(--primary-color);
    color: var(--primary-foreground-color);
    min-height: calc(100svh - 5.8rem);
}

.contact .container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 2rem;
    max-width: 1200px;
}

.contact h1 {
    margin: 2rem 0 1rem;
    color: white;
}

.contact-form {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
    gap: 1rem;
    padding: 2rem;
    background-color: var(--secondary-color);
    color: var(--secondary-foreground-color);
    border-radius: 5px;
    box-shadow: #1d1d1b 0px 0px 10px;
    min-width: 500px;
}

.contact-split {
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    flex-direction: row;
    gap: 1rem;
}

.contact-info {
    display: flex;
    justify-content: start;
    align-items: flex-start;
    flex-direction: column;
    gap: 1rem;
    padding: 2rem;
    background-color: var(--secondary-color);
    color: var(--secondary-foreground-color);
    border-radius: 5px;
    box-shadow: #1d1d1b 0px 0px 10px;
    min-width: 300px;
}

.contact-info h1 {
    margin: 0;
}

.contact-info.label:first-child {
    margin-top: 1rem;
    font-weight: 600;
}

.alert {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    padding: 1rem;
    background-color: #f44336;
    color: #fff;
    border-radius: 5px;
    margin: 1rem 0;
}

.alert-success {
    background-color: #4caf50;
    color: #fff;
}

.alert-warning {
    width: 25rem;;
}

/* Bestuursleden pagina */

.bestuursleden {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    background-color: var(--primary-color);
    color: var(--primary-foreground-color);
    min-height: calc(100svh - 5.8rem);
}

.bestuursleden-intro {
    display: flex;
    justify-content: space-around;
    align-items: start;
    flex-direction: row;
    gap: 1rem;
    padding: 2rem;
    background-color: var(--secondary-color);
    color: var(--secondary-foreground-color);
    border-radius: 5px;
    min-width: 300px;
    box-shadow: #1d1d1b 0px 0px 10px;
    width: 100%;
}

.bestuursleden-intro img {
    width: 100%;
    max-width: 600px;
    border-radius: 5px;
}

.bestuursleden h1 {
    margin: 2rem 0 1rem;
    color: white;
}

.bestuursleden .container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 2rem;
    max-width: 1200px;
}

.boardmembers {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    gap: 2rem;
    flex-wrap: wrap;
    max-width: 1200px;
    margin-top: 1rem;
}

.member-card:nth-child(odd) {
    flex-direction: row-reverse;
}

.member-card:nth-child(even) {
    flex-direction: row;
}

.member {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.member-card {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 1rem;
    padding: 2rem;
    background-color: var(--secondary-color);
    color: var(--secondary-foreground-color);
    border-radius: 5px;
    box-shadow: #1d1d1b 0px 0px 10px;
    min-width: 300px;
    width: 100%;
    position: relative;
}

.member-card p {
    max-width: 50ch;
    max-height: 100%;
    overflow-y: auto;
}

/* Historie pagina */

.historie {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    background-color: var(--primary-color);
    color: var(--primary-foreground-color);
    min-height: calc(100svh - 5.8rem);
}

.historie h1 {
    margin: 2rem 0 1rem;
    color: white;
}

.historie .container {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    padding: 2rem;
    width: 100%;
    max-width: 1200px;
}
/* ... */

